automation/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dkef-frontend
  labels:
    app: dkef-frontend
spec:
  type: NodePort
  selector:
    app: dkef-frontend
  ports:
    - port: 80
      targetPort: 80
