automation/k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dkef-frontend
  labels:
    app: dkef-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dkef.dk
      secretName: dkef-frontend-tls
  rules:
    - host: dkef.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dkef-frontend
                port:
                  number: 80
